# blockstm-go

./: .gitignore  README.md  block_executor.go  block_executor_test.go  blockstm.go  dag.go  executor.go  executor_test.go  go.mod  go.sum  mvhashmap.go  parallel_state_processor.go  queue.go  revive.toml  scheduler.go  stateless_executor.go  stateless_executor_test.go  status.go
.github/workflows/: golang.yml
cmd/fetch-block/: main.go  rpc.go  schema.go  sender.go
scripts/block-parallel-analysis/: pyproject.toml
scripts/block-parallel-analysis/src/block_parallel_analysis/: main.py
tests/data/mainnet/blocks/1150000/: block.json
tests/data/mainnet/blocks/12244002/: block.json
tests/data/mainnet/blocks/12965034/: block.json
tests/data/mainnet/blocks/15537395/: block.json
tests/data/mainnet/blocks/17035010/: block.json
tests/data/mainnet/blocks/19426587/: block.json
tests/data/mainnet/blocks/2463002/: block.json
tests/data/mainnet/blocks/2675000/: block.json
tests/data/mainnet/blocks/4370003/: block.json
tests/data/mainnet/blocks/46147/: block.json
tests/data/mainnet/blocks/7280003/: block.json
tests/data/mainnet/blocks/9069001/: block.json
tests/data/optimism/127609270/: block.json
tests/data/optimism/blocks/125037129/: block.json
